--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
-web:
-  build: .
-  volumes:
-    - "./nginx.conf:/etc/nginx/nginx.conf:ro"
-    - "./html:/usr/share/nginx/html:ro"
-  ports:
-   - "8000:80"
+# This docker-compose.yml file is used to set up your project in the local
+# development environment *only*. It is *not* used in deployment to our cloud
+# servers, and has no effect whatsoever in cloud deployments.
+#
+# See our Developer Handbook for more information:
+# http://docs.divio.com/en/latest/reference/docker-docker-compose.html
+version: "2"
+
+services:
+  # The web container is an instance of exactly the same Docker image as your
+  # Cloud application container.
+  web:
+    build: .
+    # Change the port if you'd like to expose your project locally on a
+    # different port, for example if you already use port 8000 for
+    # something else.
+    ports:
+    - "8000:80"
+    volumes:
+      - "./nginx.conf:/etc/nginx/nginx.conf:ro"
+      - "./html:/usr/share/nginx/html:ro"
